--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,175 @@
     transform: rotate(360deg);
   }
 }
+
+.logo {
+  height: 100px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  margin-top: 30px;
+}
+
+.landingPageText {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+}
+
+.landingPageContents {
+  display: flex;
+  flex-direction: column;
+}
+
+.startBrowsing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+}
+
+.citiesArrow {
+  height: 50px;
+  width: auto;
+}
+
+.signUpText {
+  text-align: center;
+}
+
+.signUpOptions {
+  display: flex;
+}
+
+.loginOption {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+
+.createAccountOption {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+
+.footerBarHome {
+  height: 50px;
+  width: auto;
+}
+
+.footerBar {
+  display: flex;
+  justify-content: center;
+}
+
+.bottomBar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.accountLogo {
+  height: 50px;
+}
+
+.hamburgerIcon {
+  height: 30px;
+}
+
+.header {
+  display: flex;
+}
+
+.loginComponent {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  margin: 10px;
+}
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  right: 36px;
+  top: 15px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #01152d;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: white;
+}
+
+.hamburgerComponent {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px;
+}
+
+.menuStyling {
+  background: white;
+}
+
+.menuItemStyling {
+  font-size: 30px;
+  color: white;
+  text-decoration: none;
+}
+
+.sliderImage {
+  height: 50px;
+  width: auto;
+}
+
+.imageRow {
+  display: flex;
+}
+
+.sliderImageContainer {
+  flex: 1;
+}
