--- a/client/src/App.css
+++ b/client/src/App.css
@@ -202,3 +202,174 @@
 .sliderImageContainer {
   flex: 1;
 }
+
+.itineraryContainer {
+  border: solid;
+  display: flex;
+  flex-direction: column;
+}
+
+.itineraryFirstRow {
+  order: 1;
+  display: flex;
+}
+
+.itinerarySecondRow {
+  order: 2;
+  display: flex;
+}
+
+.profileName {
+  flex: 1;
+}
+
+.itineraryHashtags {
+  flex: 1;
+}
+
+.itineraryThirdRow {
+  order: 3;
+}
+
+.profilePhoto {
+  flex: 1;
+  border: solid;
+}
+
+.itineraryInfo {
+  flex: 4;
+  border: solid;
+  display: flex;
+  flex-direction: column;
+}
+
+.itineraryTitle {
+  flex: 1;
+}
+
+.itineraryDetails {
+  flex: 1;
+  display: flex;
+}
+
+.itineraryLikes {
+  flex: 1;
+}
+
+.itineraryDuration {
+  flex: 1;
+}
+
+.itineraryExpense {
+  flex: 1;
+}
+
+h3 {
+  background: blue;
+  color: #fff;
+  font-size: 36px;
+  line-height: 100px;
+  margin: 10px;
+  padding: 2%;
+  position: relative;
+  text-align: center;
+}
+.variable-width .slick-slide p {
+  background: blue;
+  height: 100px;
+  color: #fff;
+  margin: 5px;
+  line-height: 100px;
+  text-align: center;
+}
+.center .slick-center h3 {
+  color: #e67e22;
+  opacity: 1;
+  transform: scale(1.08);
+}
+.center h3 {
+  opacity: 0.8;
+  transition: all 300ms ease;
+}
+.content {
+  padding: 20px;
+  margin: auto;
+  width: 90%;
+}
+.slick-slide .image {
+  padding: 10px;
+}
+.slick-slide img {
+  border: 5px solid #fff;
+  display: block;
+  margin: auto;
+}
+.slick-slide img.slick-loading {
+  border: 0;
+}
+.slick-slider {
+  margin: 30px auto 50px;
+}
+.slick-dots {
+  margin-left: 0;
+}
+.slick-thumb {
+  bottom: -45px;
+}
+.slick-thumb li {
+  width: 60px;
+  height: 45px;
+}
+.slick-thumb li img {
+  filter: grayscale(100%);
+}
+.slick-thumb li.slick-active img {
+  filter: grayscale(0%);
+}
+@media (max-width: 768px) {
+  h3 {
+    font-size: 24px;
+  }
+  .center {
+    margin-left: -40px;
+    margin-right: -40px;
+  }
+  .center .slick-center h3 {
+    color: #e67e22;
+    opacity: 1;
+    transform: scale(1);
+  }
+  .center h3 {
+    opacity: 0.8;
+    transform: scale(0.95);
+    transition: all 300ms ease;
+  }
+}
+.slick-vertical .slick-slide {
+  height: 180px;
+}
+.slick-arrow {
+  background-color: grey;
+  /* color: black; */
+}
+.slick-arrow:hover {
+  background-color: grey;
+}
+/* .slick-prev {
+  z-index: 100;
+  left: 20px !important;
+}
+.slick-next {
+  z-index: 100;
+  right: 20px !important;
+} */
+.activityStyling {
+  background: blue;
+  margin: 20px;
+}
+
+.sliderContainer {
+  margin: 50px;
+  height: 100px;
+  border: solid;
+}
