--- a/client/src/App.css
+++ b/client/src/App.css
@@ -373,3 +373,41 @@ h3 {
   height: 100px;
   border: solid;
 }
+
+.commentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px;
+}
+
+.commentUser {
+  flex: 1;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.commentText {
+  flex: 3;
+  font-weight: none;
+  width: 100%;
+  text-align: left;
+  padding: 10px;
+  background: #f5f4f5;
+  border-radius: 15px;
+}
+
+.commentArea {
+  display: flex;
+  flex-direction: column;
+}
+
+.commentForm {
+  order: 1;
+}
+
+.commentAll {
+  order: 2;
+  max-height: 200px;
+  overflow: scroll;
+}
