--- a/client/src/App.css
+++ b/client/src/App.css
@@ -608,9 +608,25 @@
 }
 
 .itinerariesContainer {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .profilePhoto {
   border-radius: 50%;
+}
+
+.box {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.profileImageUpload {
+  border-radius: 50%;
+
+  padding: 35px;
+  border: solid;
 }
